# driving-lab

./: README.md  pyproject.toml
common/: logging.py  metrics.py  utils.py  visualization.py
data/: datasets.yaml
docs/: cockpit.md  copilot.md  repr.md  roadmap.md  scene.md
modules/driving_copilot/: orchestrator.py
modules/multimodal_repr/: infer_clip.py  infer_diffusion.py  train_clip.py
modules/scene_forecast/: train_bev.py  train_forecast.py
notebooks/: analysis_2.ipynb
scripts/: run_bev.sh  run_clip.sh
