[project]
name = "driving-lab"
version = "0.1.0"
description = "Research sandbox for multimodal driving intelligence."
authors = [{ name = "Driving Lab" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["driving", "multimodal", "research"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
